fix: Widen dialog and set minWidth on reduction column to prevent header wrapping

--- a/plugins/ros/src/components/riskMatrix/CurrentRisk.module.css
+++ b/plugins/ros/src/components/riskMatrix/CurrentRisk.module.css
@@ -39,5 +39,5 @@
 }
 
 .reductionDialog {
-  width: 600px;
+  width: 700px;
 }
